# my-scheme

./: .travis.yml  README.md  TAGS  my-scheme.cabal
.stack-work/install/x86_64-linux/lts-5.16/7.10.3/flag-cache/: mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  my-scheme-0.1.0.0-2a0409eb9178082e24680130c60972d8  my-scheme-0.1.0.0-344454146207ebbab95aba437e25cf1a  my-scheme-0.1.0.0-6b965affa2515f1848cd4b8638ca0773  parsec-3.1.9-1800f03dbe5cfe654df00d552aadc7bc  text-1.2.2.1-f5b1651133426aa2c83c19d64d248779
.stack-work/install/x86_64-linux/lts-5.16/7.10.3/lib/x86_64-linux-ghc-7.10.3/my-scheme-0.1.0.0-1ytWcKne04XEkxerZju3LF/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-5.16/7.10.3/lib/x86_64-linux-ghc-7.10.3/my-scheme-0.1.0.0-4s2g40IXkvn3mTo3AYbpWg/: Lib.dyn_hi  Lib.hi  SimpleParser.hi
.stack-work/install/x86_64-linux/lts-5.16/7.10.3/pkgdb/: my-scheme-0.1.0.0-344454146207ebbab95aba437e25cf1a.conf  package.cache
app/: Main.hs
consignas/: capitulo2.md  capitulo3.md
src/: .#Simple-parser.hs  Environment.hs  Error.hs  Eval.hs  Parser.hs  Repl.hs  Simple-parser.hs  SimpleParser.hs  Syntax.hs
