name:                my-scheme
version:             0.1.0.0
synopsis:            Simple Scheme interpreter
description:         Please see README.md
homepage:            https://github.com/JuanBono/my-scheme#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleParser, Syntax
  build-depends:       base >= 4.7 && < 5,
                       parsec >= 3.1.9
  default-language:    Haskell2010

executable my-scheme-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       parsec,
                       my-scheme
  default-language:    Haskell2010

test-suite my-scheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       parsec,
                       my-scheme
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JuanBono/my-scheme
